--- a/01.Installation_on_MacOSX.md
+++ b/01.Installation_on_MacOSX.md
@@ -19,7 +19,7 @@ total 16
 drwxr-xr-x@  12 reyn  staff   408  5 31 00:11 doc
 drwxr-xr-x@ 102 reyn  staff  3468  7 21 17:08 src
 ```
-- `Makefile`: 负责对应平台的安装和卸载；
+- `Makefile`: 负责对应平台的安装和卸载
 - `README` : 使用说明
 - `doc` : 文档参考
 - `src` : 源码
