--- a/02.Lua_C_API-lua_absindex.md
+++ b/02.Lua_C_API-lua_absindex.md
@@ -94,6 +94,7 @@ LUA_API int lua_gettop (lua_State *L) {
 ### 测试
 - 测试用例
 ``` c
+// 引入必要的头文件
 #include <lua.hpp>
 #include <lualib.h>
 #include <lauxlib.h>
@@ -108,8 +109,8 @@ void test_lua_api_absindex(int index)
         lua_pushnumber(L, 1);
     }
 
-    int positive = lua_absindex(L, 10);
-    int pseudo   = lua_absindex(L, -1001000);
+    int positive = lua_absindex(L, LUAI_MAXSTACK);
+    int pseudo   = lua_absindex(L, LUA_REGISTRYINDEX);
     int negative = lua_absindex(L, -100);
 
     printf("lab_absindex got result : \n postive = %d\npseudo = %d\nnegative = %d", positive, pseudo, negative);
@@ -124,9 +125,13 @@ int main(int argc, const char * argv[]) {
 - 输出
 ``` c
 lab_absindex got result : 
-postive = 10
+postive = 1000000
 pseudo = -10001000
 negative = 901 // 1000 + 1 - 100
 Program ended with exit code: 0
 ```
 结果符合我们的预期。
+
+### 终了
+1. 看不懂的地方可以暂时跳过，只要大概知道意思就可以了，之后回过头来看的时候，可能有所启发。
+2. 切忌心浮气躁，否则翻不开篇，可能就放弃了。
