add something should be mentioned

--- a/01.Installation_on_MacOSX.md
+++ b/01.Installation_on_MacOSX.md
@@ -1,9 +1,13 @@
+## 开篇
+> 本系列纯属心血来潮。   
+> MacOSX 升级 Lua 到 5.3.3 版本。  
+
 ## 升级
 ``` bash
 $ lua -v
 Lua 5.1.5  Copyright (C) 1994-2012 Lua.org, PUC-Rio
 ```
-最新的稳定版本是 5.3.3，我们试着手动升级，顺便过下安装流程。
+最新的稳定版本是 `Lua 5.3.3`，我们试着手动升级，顺便过下安装流程。
 
 ## 获取
 下载 [Lua 5.3.3](http://www.lua.org/ftp/lua-5.3.3.tar.gz)
@@ -100,7 +104,5 @@ drwxr-xr-x  3 reyn  staff  102  7 21 17:58 share
 `make local` 会创建一个 `install` 目录，内有 `bin, include, lib, man, share` 子目录，并将对应文件拷贝到其中。 如果你想安装到本地其它目录， 运行 `make install INSTALL_TOP=xxx`，`xxx` 指目标安装目录。 
 
 ## 终了
-至此，升级安装结束。
-
-**PS：**
-某些时刻，读懂 `Makefile` 很重要。
+- 不要忽略 `README`。
+- 读懂 `Makefile` 很重要。
